<resources>
    <string name="app_name">오늘의영화</string>

    <string name="dont_care_kr">상관없어요</string>
    <string name="dont_care">0</string>

    <!-- 언어 -->
    <string name="language">LANGUAGE</string>
    <string name="english_string">english</string>
    <string name="korean_string">한국어</string>


    <!-- 국가 -->
    <string name="USA">United States of America</string>
    <string name="Korea">South Korea</string>
    <string name="Japan">Japan</string>
    <string name="France">France</string>
    <string name="Taiwan">Taiwan</string>
    <string name="China">China</string>
    <string name="HongKong">Hong Kong</string>
    <string name="UK">United Kingdom</string>
    <string name="Germany">Germany</string>
    <string name="Finland">Finland</string>
    <string name="Canada">Canada</string>
    <string name="Australia">Australia</string>




    <!-- 영화 장르 (영어) -->
    <string name="action_en">action</string>
    <string name="sf_en">SF</string>
    <string name="drama_en">drama</string>
    <string name="comedy_en">comedy</string>
    <string name="thriller_en">thriller</string>
    <string name="animation_en">animated</string>
    <string name="horror_en">horror</string>
    <string name="fantasy_en">fantasy</string>
    <string name="romance_en">romance</string>
    <string name="mystery_en">mystery</string>
    <string name="family_en">family</string>
    <string name="music_en">music</string>
    <string name="documentary_en">documentary</string>


    <!-- 영화 장르 (한국어) -->
    <string name="action_kr">액션</string>
    <string name="sf_kr">SF</string>
    <string name="drama_kr">드라마</string>
    <string name="comedy_kr">코미디</string>
    <string name="thriller_kr">스릴러</string>
    <string name="animation_kr">애니메이션</string>
    <string name="horror_kr">공포</string>
    <string name="fantasy_kr">판타지</string>
    <string name="romance_kr">로멘스</string>
    <string name="mystery_kr">미스터리</string>
    <string name="family_kr">가족</string>
    <string name="music_kr">뮤지컬</string>
    <string name="documentary_kr">다큐멘터리</string>

    <!-- 영화 장르 번호 (The MoveDatabase)-->
    <string name="action">28</string>
    <string name="sf">878</string>
    <string name="drama">18</string>
    <string name="comedy">35</string>
    <string name="thriller">53</string>
    <string name="animation">16</string>
    <string name="horror">27</string>
    <string name="fantasy">14</string>
    <string name="romance">10749</string>
    <string name="mystery">9648</string>
    <string name="family">10751</string>
    <string name="music">10402</string>
    <string name="documentary">99</string>

    <!-- 영화 국가 (한국어) -->
    <string name="korea_kr">한국</string>
    <string name="english_kr">미국 / 영국 (영어권)</string>
    <string name="japan_kr">일본</string>
    <string name="france_kr">프랑스</string>
    <string name="china_hongkong_kr">대만 / 홍콩 / 중국</string>
    <string name="hongkong_kr">홍콩</string>

    <!-- 영화 국가 (영어) -->
    <string name="korea_en">한국</string>
    <string name="english_en">미국 / 영국 (영어권)</string>
    <string name="japan_en">일본</string>
    <string name="france_en">프랑스</string>
    <string name="china_hongkong_en">대만 / 홍콩 / 중국</string>
    <string name="hongkong_en">홍콩</string>

    <!-- 영화 국가 -->
    <string name="korea">ko</string>
    <string name="english">en</string>
    <string name="japan">ja</string>
    <string name="france">fr</string>
    <string name="china">zh</string>

    <!-- 영화 개봉 날짜 -->
    <string name="date2020">2020 ~ 현재</string>
    <string name="date2015">2015 ~ 2019</string>
    <string name="date2010">2010 ~ 2014</string>
    <string name="date2005">2005 ~ 2009</string>
    <string name="date2000">2000 ~ 2004</string>
    <string name="date2000before">~ 1999</string>

    <!-- 영화 서비스 (한국어) -->
    <string name="netflix_kr">넷플릭스</string>
    <string name="watcha_kr">왓챠</string>
    <string name="wavve_kr">웨이브</string>

    <!-- 영화 서비스 -->
    <string name="netflix">8</string>
    <string name="watcha">97</string>
    <string name="wavve">356</string>


</resources>