<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mobinity.whattowatch.viewModel.FirstViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".view.FirstActivity">


        <TextView
            android:id="@+id/tv_current_question"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/namu"
            android:text="1/5"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/tv_question1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/namu"
            android:text="오늘의 당신은\n어떤 장르를 보고싶으신가요?"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_question1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_question1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/dont_care, tvQuestion11)}"
                    android:text="@string/dont_care_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/action, tvQuestion12)}"
                    android:text="@string/action_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/sf_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/sf, tvQuestion13)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/comedy_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/comedy, tvQuestion14)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/drama_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/drama, tvQuestion15)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/fantasy_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/fantasy, tvQuestion16)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />


                <TextView
                    android:id="@+id/tv_question1_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/romance_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/romance, tvQuestion17)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/thriller_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/thriller, tvQuestion18)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/horror_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/horror, tvQuestion19)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/mystery_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/mystery, tvQuestion110)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/animation_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/animation, tvQuestion111)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/family_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/family, tvQuestion112)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/music_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/music, tvQuestion114)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question1_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:padding="10dp"
                    android:text="@string/documentary_kr"
                    android:onClick="@{() -> viewModel.selectQuestion1(@string/documentary, tvQuestion15)}"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>