<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mobinity.whattowatch.viewModel.SecondViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".view.SecondActivity">

        <TextView
            android:id="@+id/tv_go_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/namu"
            android:onClick="@{() -> viewModel.goBackBtn(tvGoBack)}"
            android:gravity="center"
            android:text="전 질문으로 돌아가기"
            android:textColor="@color/main_text_color"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@id/tv_go_back"
            app:layout_constraintStart_toStartOf="@id/tv_go_back"
            app:layout_constraintTop_toBottomOf="@id/tv_go_back" />


        <TextView
            android:id="@+id/tv_current_question"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/namu"
            android:text="2/5"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/namu"
            android:text="오늘의 당신은 어느 국가의\n영화를 보고싶으신가요?"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_question2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_question2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:onClick="@{() -> viewModel.selectQuestion2(@string/dont_care, tvQuestion21)}"
                    android:padding="10dp"
                    android:text="@string/dont_care_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:onClick="@{() -> viewModel.selectQuestion2(@string/korea, tvQuestion22)}"
                    android:padding="10dp"
                    android:text="@string/korea_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:onClick="@{() -> viewModel.selectQuestion2(@string/english, tvQuestion23)}"
                    android:padding="10dp"
                    android:text="@string/english_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />


                <TextView
                    android:id="@+id/tv_question2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:onClick="@{() -> viewModel.selectQuestion2(@string/japan, tvQuestion24)}"
                    android:padding="10dp"
                    android:text="@string/japan_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_question2_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:onClick="@{() -> viewModel.selectQuestion2(@string/france, tvQuestion25)}"
                    android:padding="10dp"
                    android:text="@string/france_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />


                <TextView
                    android:id="@+id/tv_question2_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/namu"
                    android:onClick="@{() -> viewModel.selectQuestion2(@string/china, tvQuestion26)}"
                    android:padding="10dp"
                    android:text="@string/china_hongkong_kr"
                    android:textColor="@color/main_text_color"
                    android:textSize="30dp" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>